settings: Fix labels using full width of the modal.
Currently, the labels are using the full width of the modal, which results
in a clickable area that is too large. This commit fixes the issue by
setting the width of the labels to just fit its content.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -391,6 +391,8 @@
 
 .modal-field-label {
     margin-bottom: var(--margin-bottom-field-description);
+    /* Avoid having the clickable area extend to the full width of the containing element */
+    width: fit-content;
 }
 
 .dropdown-widget-button {
