--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1645,6 +1645,8 @@ $option_title_width: 180px;
 
 .settings-field-label {
     margin-bottom: var(--margin-bottom-field-description);
+    /* Avoid having the clickable area extend to the full width of the containing element */
+    width: fit-content;
 }
 
 .settings-profile-user-field-hint {
